--- a/CC-Electron/style.css
+++ b/CC-Electron/style.css
@@ -467,13 +467,21 @@ div#content-area > div > hr {
     background-color: var(--xa-hr-bgcolor);
 }
 
+
+
+
+
 /* ---------- VIDEO CONTAINER ---------- */
 div#video-container {
     position: relative;
 
-    align-self: center;
+    /* align-self: center; */
     flex: 0 0 fit-content;
 }
+
+
+
+
 
 /* ---------- video player ---------- */
 video#video-player {
@@ -499,7 +507,7 @@ div#playback-controller {
 
     display: flex;
     flex-flow: column nowrap;
-    visibility: hidden;
+    /* visibility: hidden; */
 }
 
 video#video-player:hover + div#playback-controller,
@@ -844,4 +852,77 @@ div#video-menu > div > div > p {
     color: var(--xs-div-p-color);
     font-size: var(--xs-div-p-fsize);
     font-weight: var(--xs-div-p-fweight);
+}
+
+
+
+
+div#editor-container {
+    align-items: center;
+
+    display: flex;
+    flex: 1 1 auto;
+    
+    flex-flow: column nowrap;
+
+    gap: 20px;
+    margin: var(--xm-vmargin) auto;
+}
+
+div#timeline-container {
+    background-color: var(--secondary-color);
+    border-radius: 10px;
+    height: 60px;
+    width: 1200px;
+    position: relative;
+    /* overflow:visible; */
+}
+
+svg#timeline {
+    position: absolute;
+    inset: 0;
+    display: block; /* for random gap */
+    /* background-color: rgb(47, 47, 47); */
+    width: 1200px;
+    height: 60px;
+
+    fill: rgb(142, 142, 142);
+    stroke: rgb(142, 142, 142);
+}
+
+svg#timeline > line {
+    stroke-width: 1px;
+}
+
+svg#timeline > text {
+    font-size: 12px;
+    font-weight: 10;
+
+    stroke: white;
+    fill: white;
+}
+
+svg#scrubber > line {
+    stroke-width: 1px;
+}
+
+svg#scrubber > polygon {
+    stroke-width: 0;
+}
+
+svg#scrubber {
+    height: 84px;
+    width: 12px;
+    stroke: white;
+    fill: white;
+    position: absolute;
+    left: -6px;
+    top: -12px;
+    /* pointer-events: none; */
+
+    transition: transform 1s ease;
+}
+
+video {
+    height: 400px;
 }
